# Trident-WM

./: .dir-locals.el  .gitignore  Justfile  README.rst  flake.nix  pyproject.toml
configs/: config_cpu_debug.yaml  config_gpu_beefy.yaml  config_gpu_heavy.yaml  config_gpu_sprint.yaml
src/trident_wm/: cli.py  constants.py  datamodule.py  system.py
src/trident_wm/pillars/: controller.py  memory.py  vision.py
